updated stly to stop synth names from wrapping nad added a min width  to synth tile

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -45,10 +45,12 @@
     margin: 5px;
     padding:1%;
     height: 100px;
+    min-width: 180px;
 }
 
 .synth_select li h3{
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .GO{
@@ -59,6 +61,7 @@
     height: 0 auto;
     background-color: black;
     color: white;
+    
 }
 .GO a {
     color: white;
